--- a/proj/contact.html
+++ b/proj/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Mike Smith Portfolio</title>
+    <title>Contact Mike Smith</title>
 </head>
 <body>
     <header>
@@ -14,18 +14,31 @@
         </div>
         <nav>
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">My Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+                <li class="active"><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="home">
-            <h2>Hi! My name is </h2>
-            <h1>Mike <span>Smith</span></h1>
-            <h2>Web Developer, Designer & Progarammer</h2>
+        <section class="contact">
+            <h2>Contact Me..</h2>
+            <div class="contact-list">
+                <div>
+                    <i class="fas fa-envelope"></i> Email
+                    <span>email@email.com</span>
+                </div>
+                <div>
+                    <i class="fas fa-mobile-alt"></i> Phone
+                    <span>+1 (555) 555-5555</span>
+                </div>
+                <div>
+                    <i class="fas fa-map-marker-alt"></i> Address
+                    <span>123 First St. Houston, TX</span>
+                </div>
+            </div>
+
             <div class="social-icons">
                 <a href="#!"><i class="fab fa-twitter fa-2x"></i></a>
                 <a href="#!"><i class="fab fa-facebook fa-2x"></i></a>
